--- a/CAPSTONE_TEAM01_2024/Views/Statistics/StatisticsClassByMajor.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Statistics/StatisticsClassByMajor.cshtml
@@ -95,9 +95,10 @@
                             <i class="fas fa-chart-bar me-2"></i> Thống kê
                         </button>
 
-                        <button type="button" class="btn btn-secondary" href="">
+                        <a href="@Url.Action("ExportStatisticsClassByMajor", "Statistics", new { fromYear = ViewData["fromYear"], toYear = ViewData["toYear"] })" class="btn btn-secondary">
                             <i class="bi bi-download"></i> Xuất File
-                        </button>
+                        </a>
+
 
                     </div>
                     <!-- Thông báo -->
