--- a/CAPSTONE_TEAM01_2024/Views/Statistics/StatisticsClassByYear.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Statistics/StatisticsClassByYear.cshtml
@@ -79,9 +79,11 @@
                             <i class="fas fa-chart-bar me-2"></i> Thống kê
                         </button>
 
-                        <a type="button" class="btn btn-secondary" href="">
+                        <a type="button" class="btn btn-secondary" href="@Url.Action("ExportStatisticsToExcel", "Statistics", new { fromTerm = ViewBag.CurrentFromTerm, toTerm = ViewBag.CurrentToTerm })">
                             <i class="bi bi-download"></i> Xuất File
                         </a>
+
+
                     </div>
 
                     <!-- Thông báo -->
