Fix message stastic class, fix df 6, fix login page

--- a/CAPSTONE_TEAM01_2024/Views/Users/Index.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Users/Index.cshtml
@@ -39,7 +39,7 @@
             </a>
             <!-- Left-Aligned Text Section -->
             <div style="margin-top: 20px; text-align: left; padding: 0 20px;">
-                <h8>Trường hợp Quý Thầy/Cô gặp khó khăn trong việc đăng nhập, xin vui long liên hệ nhân sự phụ trách:</h8><br>
+                <h8>Trường hợp Quý Thầy/Cô gặp khó khăn trong việc đăng nhập, xin vui lòng liên hệ nhân sự phụ trách:</h8><br>
                 <h8>- MicrosoftTeams: bao.187pm06548@vanglanguni.vn</h8><br>
                 <h8>- Zalo: 039 460 9751 (Kyle Nguyễn)</h8><br>
             </div>
