--- a/CAPSTONE_TEAM01_2024/Views/Statistics/StatisticsClassByMajor.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Statistics/StatisticsClassByMajor.cshtml
@@ -58,8 +58,8 @@
                         <select
                             id="FromYearFilter"
                             class=" form-select-lg"
-                            onchange="filterTable()"
-                        >
+                            onchange="filterTable()" required
+                            oninvalid="setCustomValidity('Vui lòng chọn dữ liệu ')">
                             <option selected="">Lựa chọn Khóa</option>
                             @foreach (var term in ViewBag.AllTerms as List<string>)
                             {
@@ -91,6 +91,7 @@
                             class="btn btn-primary shadow-sm"
                             onclick="handleStatistics()"
                             style="font-size: 14px; margin-left: 15px;"
+                            
                         >
                             <i class="fas fa-chart-bar me-2"></i> Thống kê
                         </button>
@@ -131,7 +132,7 @@
                             </button>
                         </div>
                     }
-
+                    <div id="error-message" class="alert alert-danger" style="display: none; margin-top: 5px ">Vui lòng chọn mục Từ khoá - Đến khoá.</div>
 
                     <!-- Bảng thông tin (trống) -->
                     <table class="table table-striped table-hover">
@@ -193,12 +194,14 @@
     </main>
 </div>
 <script>
-    function handleStatistics() {
+    function handleStatistics(event) {
         const fromYear = document.getElementById('FromYearFilter').value;
         const toYear = document.getElementById('ToYearFilter').value;
+        const errorMessage = document.getElementById('error-message');
 
         if (!fromYear || !toYear || fromYear === 'Lựa chọn Khóa' || toYear === 'Lựa chọn Khóa') {
-            alert('Vui lòng chọn cả Từ Khóa và Đến Khóa.');
+            errorMessage.style.display = 'block';
+            event.preventDefault();
             return;
         }
 
