Update view 1 chút

--- a/CAPSTONE_TEAM01_2024/Views/Categories/SemesterPlan.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/SemesterPlan.cshtml
@@ -250,9 +250,9 @@ bool isNotAdvisor = !roles.Contains("CVHT");
                                     <td class="text-center">
                                         
                                             <button class="btn btn-outline-success btn-sm"
-                                                    title="Xem chi tiết"
+                                                    title="Xem và Cập Nhật chi tiết"
                                                     onclick="openEditPlanDetailModal(@plan.PlanId, @plan.PeriodId, '@plan.ClassId', '@plan.Status')">
-                                                <i class="fa-solid fa-eye custom-icon"></i>
+                                                <i class="fa-solid fa-pencil"></i>
                                             </button>
                                         @if (isNotFaculty)
                                         {
