update view hompage

--- a/CAPSTONE_TEAM01_2024/Views/Categories/EndSemesterReport.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/EndSemesterReport.cshtml
@@ -205,8 +205,8 @@
     }
 
     .btn-secondary {
-        background-color: #6c757d;
-        color: white;
+        background-color: #ff5351;
+        color: black;
         border: none;
     }
 
