--- a/CAPSTONE_TEAM01_2024/Views/Home/HomePage.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Home/HomePage.cshtml
@@ -30,7 +30,7 @@
                 border-radius:40px;
                 max-width:70%;
                 max-height:45%">
-        <h3 style="color:white">WEBSITE QUẢN LÝ CÔNG TÁC CỐ VẤN HỌC TẬP</h3>
+        <h3 style="color:white">HỆ THỐNG QUẢN LÝ CÔNG TÁC CỐ VẤN HỌC TẬP</h3>
         <img src="https://insacmau.com/wp-content/uploads/2023/02/logo-van-lang.png" alt="Logo Đại học Văn Lang" style="width:50px; height:50px">
         <h1 style="color:white">XIN CHÀO</h1>
         <h2 style="color:white">CHÚC BẠN MỘT NGÀY LÀM VIỆC TỐT LÀNH.</h2>
