--- a/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml.css
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml.css
@@ -42,7 +42,7 @@
         }
 
 .sidebar {
-    background-image: url('https://kientruc.vlu.edu.vn/storage/app/media/moi-truong-hoc-tap/co_so_1.png');
+    background-image: url('https://www.vietjack.com/thong-tin-tuyen-sinh/images/truong-dai-hoc-van-lang-181749.PNG');
     background-size: cover;
     background-position: center;
     background-color: rgba(0, 0, 0, 0.3); /* Nền sáng hơn */
